changed some formatting issues on mobile

--- a/src/stylesheets/_projects.scss
+++ b/src/stylesheets/_projects.scss
@@ -10,7 +10,8 @@
 
 .project-heading {
   font-size: 1.4rem;
-  font-weight: 700;
+  color: #222;
+  font-weight: 600;
 }
 
 .edit-button {
