--- a/src/stylesheets/_sidenav.scss
+++ b/src/stylesheets/_sidenav.scss
@@ -120,3 +120,10 @@
     left: 0;
   }
 }
+
+.sidenav-header {
+  // background-color: #154360;
+  color: #154360;
+  font-size: 1.6rem;
+  font-weight: 700;
+}
