--- a/src/stylesheets/_tasks.scss
+++ b/src/stylesheets/_tasks.scss
@@ -1,9 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap");
 
-#tasks {
-  padding: 0 1rem;
-}
-
 .task-box {
   display: flex;
   flex-direction: column;
